feat: add `answer_v1` lambda
