# backend/api/gen/src/models/answer_missing_code_dto.rs
@@ -1,0 +1,35 @@
+/*
+ * just-code-dev
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 2023-03-10 06:01:08UTC
+ *
+ * Generated by: https://openapi-generator.tech
+ */
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct AnswerMissingCodeDto {
+    #[serde(rename = "kind")]
+    pub kind: crate::models::TaskContentKindDto,
+    #[serde(rename = "answer")]
+    pub answer: serde_json::Value,
+    #[serde(
+        rename = "additionalProperties",
+        skip_serializing_if = "Option::is_none"
+    )]
+    pub additional_properties: Option<String>,
+}
+
+impl AnswerMissingCodeDto {
+    pub fn new(
+        kind: crate::models::TaskContentKindDto,
+        answer: serde_json::Value,
+    ) -> AnswerMissingCodeDto {
+        AnswerMissingCodeDto {
+            kind,
+            answer,
+            additional_properties: None,
+        }
+    }
+}
