# backend/api/gen/src/models/hash_map_answers_dto.rs
@@ -1,0 +1,26 @@
+/*
+ * just-code-dev
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 2023-03-10 06:01:08UTC
+ *
+ * Generated by: https://openapi-generator.tech
+ */
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct HashMapAnswersDto {
+    #[serde(rename = "kind")]
+    pub kind: crate::models::AnswerKindDto,
+    #[serde(rename = "answer")]
+    pub answer: ::std::collections::HashMap<String, String>,
+}
+
+impl HashMapAnswersDto {
+    pub fn new(
+        kind: crate::models::AnswerKindDto,
+        answer: ::std::collections::HashMap<String, String>,
+    ) -> HashMapAnswersDto {
+        HashMapAnswersDto { kind, answer }
+    }
+}
