# backend/api/gen/src/models/multi_answers_dto.rs
@@ -1,0 +1,23 @@
+/*
+ * just-code-dev
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 2023-03-10 06:01:08UTC
+ *
+ * Generated by: https://openapi-generator.tech
+ */
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct MultiAnswersDto {
+    #[serde(rename = "kind")]
+    pub kind: crate::models::AnswerKindDto,
+    #[serde(rename = "answer")]
+    pub answer: Vec<u16>,
+}
+
+impl MultiAnswersDto {
+    pub fn new(kind: crate::models::AnswerKindDto, answer: Vec<u16>) -> MultiAnswersDto {
+        MultiAnswersDto { kind, answer }
+    }
+}
