# backend/api/lambda/content/dto/src/mapper/mod.rs
@@ -1,3 +1,5 @@
+mod answer_dto;
+mod answer_validation_result_dto;
 mod content_asset_dto;
 mod expected_keyword_dto;
 mod expected_options_dto;
