# openapi/swagger_template.yaml
@@ -9,6 +9,8 @@ tags:
     description: Profile
   - name: content
     description: Content
+  - name: cms
+    description: CMS
   - name: wip 
     description: Work in progress - nie dotykać
 paths:
@@ -259,10 +261,13 @@ paths:
         required: true
         schema:
           type: "string"
+  ###########################################################
+  # CMS
+  ###########################################################
   /v1/content:
     put:
       tags:
-        - content
+        - cms
       responses:
         "202":
           description: Accepted
@@ -305,7 +310,7 @@ paths:
   /v1/content/dry-run:
     put:
       tags:
-        - content
+        - cms
       responses:
         "202":
           description: Accepted
@@ -342,7 +347,7 @@ paths:
   /v1/content/assets/upload-url:
     get:
       tags:
-        - content
+        - cms
       parameters:
         - in: query
           name: count
@@ -375,7 +380,7 @@ paths:
   /v1/content/assets:
     get:
       tags:
-        - content
+        - cms
       responses:
         "200":
           description: Ok
@@ -401,7 +406,7 @@ paths:
         connectionType: "INTERNET"
     delete:
       tags:
-        - content
+        - cms
       responses:
         "200":
           description: Ok
@@ -427,8 +432,39 @@ paths:
         httpMethod: "POST"
         uri: ${delete_content_assets_v1}
         connectionType: "INTERNET"
-                  
-
+  /v1/content/task/{task_id}/answer:
+    post:
+      tags:
+        - wip
+      responses:
+        "200":
+          description: Ok
+          content: 
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/AnswerValidationResultDto"
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorDto"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AnswerDto"
+      security:
+        - just-code-dev-moderator-authorizer: []
+    parameters:
+      - name: "task_id"
+        in: "path"
+        required: true
+        schema:
+          type: "string"
 components:
   securitySchemes:
     just-code-dev-app-authorizer:
@@ -1117,6 +1153,83 @@ components:
         created_at:
           type: string
           format: date-time
+    AnswerDto:
+      type: object
+      oneOf:
+        - $ref: "#/components/schemas/EmptyAnswerDto"
+        - $ref: "#/components/schemas/SingleAnswerDto"
+        - $ref: "#/components/schemas/MultiAnswersDto"
+        - $ref: "#/components/schemas/HashMapAnswersDto"
+      discriminator:
+        propertyName: kind
+        mapping:
+          EMPTY: "#/components/schemas/EmptyAnswerDto"
+          SINGLE: "#/components/schemas/SingleAnswerDto"
+          MULTI: "#/components/schemas/MultiAnswersDto"
+          HASH_MAP: "#/components/schemas/HashMapAnswersDto"
+
+    AnswerKindDto:
+      type: string
+      enum:
+        - EMPTY
+        - SINGLE
+        - MULTI
+        - HASH_MAP
+    EmptyAnswerDto:
+      type: object
+      required:
+        - kind
+      properties: 
+        kind:
+          $ref: "#/components/schemas/AnswerKindDto"
+    SingleAnswerDto:
+      type: object
+      required:
+        - kind
+        - answer
+      properties: 
+        kind:
+          $ref: "#/components/schemas/AnswerKindDto"
+        answer:
+          type: integer
+          minimum: 0
+          maximum: 65535
+    MultiAnswersDto:
+      type: object
+      required:
+        - kind
+        - answer
+      properties: 
+        kind:
+          $ref: "#/components/schemas/AnswerKindDto"
+        answer:
+          type: array
+          items:
+            type: integer
+            minimum: 0
+            maximum: 65535
+    HashMapAnswersDto:
+      type: object
+      required:
+        - kind
+        - answer
+      properties: 
+        kind:
+          $ref: "#/components/schemas/AnswerKindDto"
+        answer:
+          type: object
+          additionalProperties:
+            type: string
+    AnswerValidationResultDto:
+      type: object
+      required:
+        - is_valid
+        - had_valid_answer_before
+      properties:
+        is_valid:
+          type: boolean
+        had_valid_answer_before:
+          type: boolean
     ###########################################################
     # Error
     ###########################################################
